--- a/code/UI/DefaultHud.razor
+++ b/code/UI/DefaultHud.razor
@@ -1,4 +1,8 @@
-﻿<root>
+﻿@inherits Panel
+@using Sandbox;
+@using Sandbox.UI;
+@namespace Platformer.UI
+<root>
     <div class="head">
         <RoundTimer />
         <CourseTimer />
