--- a/code/UI/Tag/TagHud.razor
+++ b/code/UI/Tag/TagHud.razor
@@ -1,6 +1,8 @@
-﻿
-<link rel="stylesheet" href="TagHud.scss" />
-
+﻿@inherits Panel
+@using Sandbox;
+@using Sandbox.UI;
+@namespace Platformer.UI
+@attribute [StyleSheet("UI/Tag/TagHud.scss")]
 <root>
     <TagScore />
     <img SRC="ui/hud/logo/tag_logo.png" class="Title"></img>
