--- a/code/UI/Base/Controls/ControlPanel.scss
+++ b/code/UI/Base/Controls/ControlPanel.scss
@@ -12,7 +12,7 @@ ControlPanel {
     font-family: Nunito-Bold;
     opacity: 0;
     transition: all .15s ease-in;
-    align-items: start;
+    align-items: flex-start;
     color: #b7b7b7;
     text-shadow: 0px 1px 0px rgba( black, 0.3 );
     font-size: 16px;
