--- a/code/UI/Base/Course/StatusCard.scss
+++ b/code/UI/Base/Course/StatusCard.scss
@@ -41,7 +41,7 @@
 
     > .main {
         border-radius: 0px 0px 20px 20px;
-        background-image: linear-gradient(58deg, rgba(255, 243, 224, 1), rgba(255, 255, 255, 1) 80% );
+        background-image: linear-gradient(0deg, rgba(255, 243, 224, 1) 0%, rgba(255, 255, 255, 1) 100% );
 
         label {
             color: #d93f53;
