--- a/code/UI/Base/MapVote/MapVotePanel.scss
+++ b/code/UI/Base/MapVote/MapVotePanel.scss
@@ -56,7 +56,7 @@ mapvotepanel > .inner > .header {
             font-size: 16px;
             border-radius: 0px 0px 20px 20px;
             box-shadow: 2px 2px 10px rgba( black, 0.5 );
-            background-image: linear-gradient(0deg, rgba(255, 243, 224, 1), rgba(255, 255, 255, 1) 80% );
+            background-image: linear-gradient(0deg, rgba(255, 243, 224, 1) 0%, rgba(255, 255, 255, 1) 100% );
         }
 
         .countdown {
@@ -68,7 +68,7 @@ mapvotepanel > .inner > .header {
             font-family: Nunito-Black;
             border-radius: 20px 20px 0px 0px;
             box-shadow: 2px 2px 10px rgba( black, 0.5 );
-            background-image: linear-gradient(180deg, rgba(255, 243, 224, 1), rgba(255, 255, 255, 1) 80% );
+            background-image: linear-gradient(180deg, rgba(255, 243, 224, 1) 0%, rgba(255, 255, 255, 1) 100% );
         }
     }
 }
