Fix stylesheet paths

--- a/code/UI/Base/Controls/ControlPanel.razor
+++ b/code/UI/Base/Controls/ControlPanel.razor
@@ -3,7 +3,7 @@
 @using Sandbox.UI;
 @using Movement;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Base/Controls/ControlPanel.scss")]
+@attribute [StyleSheet("ControlPanel.scss")]
 
 <root>
 </root>
