--- a/code/UI/Base/MapVote/MapIcon.razor
+++ b/code/UI/Base/MapVote/MapIcon.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Base/MapVote/MapIcon.scss")]
+@attribute [StyleSheet("MapIcon.scss")]
 
 <root>
     <div class="icon">
