--- a/code/UI/Base/MapVote/MapVotePanel.razor
+++ b/code/UI/Base/MapVote/MapVotePanel.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Base/MapVote/MapVotePanel.scss")]
+@attribute [StyleSheet("MapVotePanel.scss")]
 
 <root>
     <div class="inner">
