--- a/code/UI/Base/PlatformerKillfeed/PlatformerKillfeed.razor
+++ b/code/UI/Base/PlatformerKillfeed/PlatformerKillfeed.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Base/PlatformerKillfeed/PlatformerKillfeed.scss")]
+@attribute [StyleSheet("PlatformerKillfeed.scss")]
 
 <root>
 
