--- a/code/UI/Base/PlayerInfo/HealthCurrent.razor
+++ b/code/UI/Base/PlayerInfo/HealthCurrent.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Base/PlayerInfo/HealthCurrent.scss")]
+@attribute [StyleSheet("HealthCurrent.scss")]
 
 <root>
     <div class="icon">
