--- a/code/UI/Base/PlayerInfo/PlayerCard.razor
+++ b/code/UI/Base/PlayerInfo/PlayerCard.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Base/PlayerInfo/PlayerCard.scss")]
+@attribute [StyleSheet("PlayerCard.scss")]
 <root>
     <AvatarPanel />
 
