--- a/code/UI/Base/Scoreboard/Scoreboard.razor
+++ b/code/UI/Base/Scoreboard/Scoreboard.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer
-@attribute [StyleSheet("UI/Base/Scoreboard/Scoreboard.scss")]
+@attribute [StyleSheet("Scoreboard.scss")]
 
 <root class="scoreboard">
     <img class="logo" src="/ui/hud/scoreboard/logo.png" />
