--- a/code/UI/Brawl/BrawlHud.razor
+++ b/code/UI/Brawl/BrawlHud.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Brawl/BrawlHud.scss")]
+@attribute [StyleSheet("BrawlHud.scss")]
 
 <root>
 
