--- a/code/UI/Hud.razor
+++ b/code/UI/Hud.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Hud.scss")]
+@attribute [StyleSheet("Hud.scss")]
 
 <root>
 	<Scoreboard />
