--- a/code/UI/Tag/TagHud.razor
+++ b/code/UI/Tag/TagHud.razor
@@ -2,7 +2,7 @@
 @using Sandbox;
 @using Sandbox.UI;
 @namespace Platformer.UI
-@attribute [StyleSheet("UI/Tag/TagHud.scss")]
+@attribute [StyleSheet("TagHud.scss")]
 <root>
     <TagScore />
     <img SRC="ui/hud/logo/tag_logo.png" class="Title"></img>
