Razor doesn't like this

--- a/code/UI/Brawl/BrawlHud.razor
+++ b/code/UI/Brawl/BrawlHud.razor
@@ -6,7 +6,7 @@
 
 <root>
 
-    <img SRC="ui/hud/logo/brawl_logo.png" class="Title"></img>
+    <img SRC="ui/hud/logo/brawl_logo.png" class="Title" />
     <HurtOverlay />
 
 </root>
