--- a/code/UI/Tag/TagHud.razor
+++ b/code/UI/Tag/TagHud.razor
@@ -5,7 +5,7 @@
 @attribute [StyleSheet("TagHud.scss")]
 <root>
     <TagScore />
-    <img SRC="ui/hud/logo/tag_logo.png" class="Title"></img>
+    <img SRC="ui/hud/logo/tag_logo.png" class="Title"/>
     <div class="head">
         <RoundTimer />
         <TagRound />
